<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Geo Siege Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:geo="http://schemas.android.com/apk/res/com.geosiege.game">
  <PreferenceCategory android:title="@string/preference_title">
   
    <ListPreference
        android:key="inputLocation"
        android:title="@string/preference_input_location"
        android:entries="@array/preference_input_location_options"
        android:entryValues="@array/preference_input_location_option_values"
        android:dialogTitle="@string/preference_input_location_dialog" />    
        
	  <CheckBoxPreference
		    android:key="swapJoysticks"
		    android:title="@string/preference_swap_joysticks"
		    android:summaryOn="@string/preference_swap_joysticks_on"
		    android:summaryOff="@string/preference_swap_joysticks_off"
		    android:defaultValue="false"
		    android:persistent="true"
		    />
		    
		 <CheckBoxPreference
        android:key="showFps"
        android:title="@string/preference_show_fps"
        android:defaultValue="false"
        android:persistent="true"
        />
                
      <!-- <com.replica.replicaisland.KeyboardConfigDialogPreference
          android:key="keyconfig"
          android:title="@string/preference_key_config"
          android:summary="@string/preference_key_config_summary"
          android:dialogLayout="@layout/key_config" 
          android:dialogTitle="@string/preference_key_config_dialog_title"
          android:negativeButtonText="@string/preference_key_config_dialog_cancel"
          android:positiveButtonText="@string/preference_key_config_dialog_ok"
          replica:leftKey="keyLeft"
          replica:rightKey="keyRight"
          replica:jumpKey="keyJump"
          replica:attackKey="keyAttack"
          /> -->
  </PreferenceCategory>
</PreferenceScreen>
           <!-- <CheckBoxPreference
                        android:key="enableSound"
                android:title="@string/preference_enable_sound"
                android:summaryOn="@string/preference_enable_sound_summary"
                android:summaryOff="@string/preference_enable_sound_summary"
                android:defaultValue="true"
                android:persistent="true"
                />  -->
    
     <!-- <PreferenceCategory
            android:title="@string/preference_save_game">
            
       <com.replica.replicaisland.YesNoDialogPreference
                        android:key="erasegame"
                android:title="@string/preference_erase_save_game"
                android:dialogMessage="@string/preference_erase_save_game_dialog" 
                android:dialogTitle="@string/preference_erase_save_game_dialog_title"
                android:negativeButtonText="@string/preference_erase_save_game_dialog_cancel"
                android:positiveButtonText="@string/preference_erase_save_game_dialog_ok"
                />
        
        <CheckBoxPreference
                        android:key="enableStats"
                android:title="@string/preference_enable_statistics"
                android:summaryOn="@string/preference_enable_statistics_summary"
                android:summaryOff="@string/preference_enable_statistics_summary"
                android:defaultValue="true"
                android:persistent="true"
                />
                    
    </PreferenceCategory>  -->
             
    
    <!-- <PreferenceCategory android:title="@string/preference_about">

    </PreferenceCategory>  -->


